# wvec

./: .gitignore  Cargo.toml  benchmark.py  requirements-dev.txt  test_wvec.py
src/: lib.rs
